--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,22 @@
-@import './map/Map.scss';
-
 html, body, #app {
   padding:0;
   margin:0;
   min-height:100vh;
   overflow:hidden;
 }
+
+/** Mixins **/
+@mixin rounded-corners($radius) {
+  -webkit-border-radius:$radius;
+   -khtml-border-radius:$radius;
+     -moz-border-radius:$radius;
+          border-radius:$radius;
+}
+
+@mixin box-shadow($x, $y, $radius, $opacity) {
+  -webkit-box-shadow:$x $y $radius rgba(0, 0, 0, $opacity);
+     -moz-box-shadow:$x $y $radius rgba(0, 0, 0, $opacity);
+          box-shadow:$x $y $radius rgba(0, 0, 0, $opacity);
+}
+
+@import './map/Map';
