--- a/src/map/Map.scss
+++ b/src/map/Map.scss
@@ -5,9 +5,13 @@
   .p6o-map-hover {
     position:absolute;
     background-color:#fff;
-    padding:10px 15px;
+    padding:10px 12px;
     @include rounded-corners(2px);
     @include box-shadow(2px, 2px, 14px, 0.4);
   }
 
+}
+
+.p6o-map-container.hover * {
+  cursor:pointer;
 }
