--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,11 @@ html, body, #app {
   margin:0;
   min-height:100vh;
   overflow:hidden;
-  font-family:'Ubuntu', sans-serif;
+  
+  * {
+    font-family:'Ubuntu', sans-serif;
+  }
+
 }
 
 /** Mixins **/
@@ -20,4 +24,5 @@ html, body, #app {
           box-shadow:$x $y $radius rgba(0, 0, 0, $opacity);
 }
 
+@import './hud/HUD';
 @import './map/Map';
