--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@ html, body, #app {
   overflow:hidden;
   
   * {
-    font-family:'Ubuntu', sans-serif;
+    font-family:'Quicksand', sans-serif;
   }
 
 }
