Fulltext search (basic)

--- a/src/map/Map.scss
+++ b/src/map/Map.scss
@@ -6,6 +6,7 @@
     position:absolute;
     background-color:#fff;
     padding:10px 12px;
+    max-width:500px;
     @include rounded-corners(2px);
     @include box-shadow(2px, 2px, 14px, 0.4);
   }
