--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@ html, body, #app {
   margin:0;
   min-height:100vh;
   overflow:hidden;
+  font-size:16px;
   
   * {
     font-family:'Quicksand', sans-serif;
@@ -25,4 +26,5 @@ html, body, #app {
 }
 
 @import './hud/HUD';
+@import './loading/Loading';
 @import './map/Map';
