--- a/src/index.scss
+++ b/src/index.scss
@@ -3,13 +3,17 @@ html, body, #app {
   margin:0;
   min-height:100vh;
   overflow:hidden;
-  font-size:16px;
+  font-size:14px;
+  color:#333;
   
   * {
     font-family:'Quicksand', sans-serif;
   }
 
 }
+
+$bl-red:#c61327;
+$bl-red-hover:#e55767;
 
 /** Mixins **/
 @mixin rounded-corners($radius) {
