--- a/src/loading/Loading.scss
+++ b/src/loading/Loading.scss
@@ -4,7 +4,7 @@
   left:0;
   width:100vw;
   height:100vh;
-  background-color:#1a6dad6b;
+  background-color:#c61313cc;
   z-index:1;
 
   .p6o-loading-center {
@@ -18,7 +18,7 @@
     align-items:center;
     justify-content:center;
     flex-direction:column;
-    font-size:14px;
+    font-size:12px;
 
     p {
       margin:0;
@@ -49,8 +49,8 @@
     position:absolute;
     bottom:20px;
     left:20px;
-    font-size:13px;
-    color:#bfe1ff;
+    font-size:12px;
+    color:#ffbbc3;
   }
 
   @keyframes rotating {
