--- a/src/tutorial/Tutorial.scss
+++ b/src/tutorial/Tutorial.scss
@@ -8,13 +8,61 @@
   display:flex;
   justify-content:center;
   align-items:center;
-  background-color:rgba(0,0,0,0.65);
+  background-color:rgba(0,0,0,0.35);
   z-index:99;
 
   .p6o-welcome {
-    padding:10px;
+    padding:15px 20px;
     background-color:#fff;
     pointer-events:all;
+    width:440px;
+    line-height:160%;
+    @include rounded-corners(2px);
+    @include box-shadow(2px, 2px, 18px, 0.4);
+
+    h1 {
+      padding:10px 0;
+      margin:0;
+      font-size:18px;
+    }
+
+    p {
+      padding:20px 0 40px 0;
+      margin:0;
+    }
+
+    .p6o-welcome-buttons {
+      text-align:right;
+
+      button {
+        border:none;
+        outline:none;
+        cursor:pointer;
+        padding:10px 16px;
+        background-color:transparent;
+        font-size:15px;
+        @include rounded-corners(4px);
+      }
+
+      button.p6o-no-thanks {
+        margin-right:15px;
+      }
+
+      button.p6o-no-thanks:hover {
+        background-color:#efefef;
+      }
+
+      button.p6o-take-tour {
+        background-color:$bl-red;
+        color:#fff;
+      }
+
+      button.p6o-take-tour:hover {
+        background-color:$bl-red-hover;
+      }
+
+    }
+
   }
 
 }
