--- a/src/loading/Loading.scss
+++ b/src/loading/Loading.scss
@@ -30,9 +30,9 @@
     }
 
     .p6o-load-progress-outer {
-      border:1px solid #fff;
+      background-color:rgba(255, 255, 255, 0.2);
       height:2px;
-      width:240px;
+      width:280px;
       max-width:80vw;
       position:relative;
 
@@ -90,8 +90,8 @@
   }
 
   .logo-image {
-    width:80px;
-    height:80px;
+    width:60px;
+    height:60px;
     
     -webkit-animation:rotating 15s linear infinite;
        -moz-animation:rotating 15s linear infinite;
