--- a/src/tutorial/Tutorial.scss
+++ b/src/tutorial/Tutorial.scss
@@ -8,7 +8,7 @@
   display:flex;
   justify-content:center;
   align-items:center;
-  background-color:rgba(0,0,0,0.35);
+  background-color:transparent;
   z-index:99;
 
   .p6o-welcome {
