Loading screen color

--- a/src/loading/Loading.scss
+++ b/src/loading/Loading.scss
@@ -4,7 +4,7 @@
   left:0;
   width:100vw;
   height:100vh;
-  background-color:#c61313ac;
+  background-color:#000000c4; // #c61313ac;
   z-index:1;
 
   .p6o-loading-center {
@@ -53,7 +53,7 @@
     bottom:20px;
     left:20px;
     font-size:12px;
-    color:#ffbbc3;
+    color:#ffffff60; // #ffbbc3;
   }
 
   @keyframes rotating {
