--- a/src/map/Map.scss
+++ b/src/map/Map.scss
@@ -18,7 +18,7 @@
 }
 
 .p6o-map-container.loading {
-  filter:blur(10px) grayscale(100%) contrast(1.4);
+  filter:blur(10px) grayscale(100%) contrast(0.8); // contrast(1.4);
 
   .p6o-hud {
     display:none;
