--- a/src/hud/HUD.scss
+++ b/src/hud/HUD.scss
@@ -1,3 +1,16 @@
+.p6o-hud-button {
+  border:1px solid rgba(0,0,0,0.2);
+  z-index:98;
+  cursor:pointer;
+  background-color:#f4f4f4;
+  box-shadow:inset 2px 4px 18px #fff, inset -2px -3px 4px rgba(0,0,0,0.15), 0 0 12px rgba(0,0,0,0.35);
+}
+
+.p6o-hud-button:hover {
+  background-color:#fff;
+  box-shadow:inset 2px 4px 18px #fff, inset -2px -3px 4px rgba(0,0,0,0.15), 0 0 12px rgba(255,255,255,0.2);
+}
+
 .p6o-hud {
   color:#3e3e3e;
 
@@ -11,17 +24,7 @@
     display:flex;
     align-items:center;
     justify-content:center;
-    background-color:#f4f4f4;
-    border:1px solid rgba(0,0,0,0.2);
-    box-shadow:inset 2px 4px 18px #fff, inset -2px -3px 4px rgba(0,0,0,0.15), 0 0 12px rgba(0,0,0,0.35);
-    z-index:98;
-    cursor:pointer;
     @include rounded-corners(50%);
-  }
-
-  .p6o-magic-button:hover {
-    background-color:#fff;
-    box-shadow:inset 2px 4px 18px #fff, inset -2px -3px 4px rgba(0,0,0,0.15), 0 0 12px rgba(255,255,255,0.2);
   }
 
   .p6o-hud-searchpanel {
