--- a/src/hud/HUD.scss
+++ b/src/hud/HUD.scss
@@ -27,34 +27,6 @@
     @include rounded-corners(50%);
   }
 
-  .p6o-hud-searchpanel {
-    position:absolute;
-    left:50px;
-    top:22px;
-    height:40px;
-    padding-left:40px;
-    box-sizing:border-box;
-    background-color:#fcfCfc;
-    box-shadow:inset 4px 1px 6px #fff, inset -1px -1px 2px rgba(0,0,0,0.25), 0 0 6px rgba(0,0,0,0.1);
-    border-radius:4px;
-    overflow:hidden;
-    z-index:0;
-
-    input {
-      outline:none;
-      border:none;
-      width:100%;
-      height:100%;
-      box-sizing:border-box;
-      font-size:18px;
-      outline:none;
-      border:none;
-      width:100%;
-      height:100%;
-      box-sizing:border-box;
-      background-color:transparent;
-    }
-
-  }
-
 }
+
+@import 'search/SearchPanel';
