For usertesting: switchable map modes

--- a/src/index.scss
+++ b/src/index.scss
@@ -33,3 +33,5 @@ $bl-red-hover:#e55767;
 @import './loading/Loading';
 @import './map/Map';
 @import './tutorial/Tutorial';
+
+@import './usertesting/UserTesting';
