Re-enabled mouseover hover

--- a/src/index.scss
+++ b/src/index.scss
@@ -32,6 +32,7 @@ $bl-red-hover:#e55767;
 @import './hud/HUD';
 @import './loading/Loading';
 @import './map/Map';
+@import './selection/SelectionPreview';
 @import './tutorial/Tutorial';
 
 @import './usertesting/UserTesting';
