--- a/src/selection/SelectionPreview.scss
+++ b/src/selection/SelectionPreview.scss
@@ -1,3 +1,32 @@
 .p6o-selection {
-  
+  position:absolute;
+  top:90px;
+  left:90px;
+  width:440px;
+  background-color:#fff;
+  @include rounded-corners(3px);
+  @include box-shadow(1px, 1px, 18px, 0.25); 
+
+  .p6o-selection-drag-handle {
+    height:20px;
+    cursor:move;
+    @include rounded-corners-top(3px);    
+  }
+
+  .p6o-selection-header-image {
+    position:relative;
+    width:100%;
+    height:180px;
+    background-size:cover;
+    background-position:center 45%;
+  }
+
+  .p6o-selection-description {
+    padding:10px 20px;
+    font-size:15px;
+    line-height:140%;
+    max-height:200px;
+    overflow-y:auto;
+  }
+
 }
