--- a/src/map/Map.scss
+++ b/src/map/Map.scss
@@ -33,6 +33,7 @@
 
 }
 
+
 .p6o-map-container.hover * {
   cursor:pointer;
 }
@@ -42,6 +43,96 @@
 
   .p6o-hud {
     display:none;
+  }
+
+}
+
+.p6o-map-container .maplibregl-popup {
+  max-width:none !important;
+
+  .maplibregl-popup-tip {
+    display:none;
+  }
+
+  .maplibregl-popup-content {
+    padding:0;
+    margin:20px 0;
+  } 
+
+  .p6o-selection {
+    width:440px;
+
+    h1 {
+      font-size:17px;
+      margin:0;
+      padding:0;
+    }
+
+    .p6o-selection-header-image {
+      position:relative;
+      width:100%;
+      height:180px;
+      background-size:cover;
+      background-position:center;
+      @include rounded-corners-top(3px);
+
+      h1 {
+        display:block;
+        padding:25px 20px 10px 20px;
+        position:absolute;
+        bottom:0;
+        left:0;
+        width:100%;
+        box-sizing:border-box;
+        color:#fff;
+        text-shadow:1px 1px 2px rgb(0,0,0,0.95);
+        @include linear-gradient(rgba(0,0,0,0), rgba(0,0,0,.45));
+      }
+    }
+
+    .p6o-selection-header-noimage h1 {
+      padding:20px 20px 0 20px;
+    }
+
+    .p6o-selection-description {
+      padding:10px 20px;
+      font-size:15px;
+      line-height:140%;
+      max-height:200px;
+      overflow-y:auto;
+    }
+
+    .p6o-selection-source {
+      padding:20px;
+      color:#fff;
+      font-size:16px;
+      display:flex;
+      justify-content:space-between;
+      align-items:flex-end;
+      @include rounded-corners-bottom(3px);
+
+      p {
+        margin:0;
+        padding:0;
+      }
+
+      a {
+        font-size:15px;
+        font-weight:bold;
+        color:#fff;
+        display:inline-block;
+        padding:10px;
+        border:2px solid #fff;
+        text-decoration:none;
+        @include rounded-corners(3px);
+      }
+
+      a:hover {
+        background-color:rgba(255,255,255,0.25);
+      }
+
+    }
+
   }
 
 }
