Minor CSS tweaks

--- a/src/hud/search/Facets.scss
+++ b/src/hud/search/Facets.scss
@@ -32,6 +32,8 @@
         span.p6o-facet-value-count {
           width:60px;
           text-align:right;
+          color:#fff;
+          font-weight:bold;
         }
 
       }
