--- a/test/index.scss
+++ b/test/index.scss
@@ -3,3 +3,12 @@
 html, body {
   background-color:lightblue;
 }
+
+button {
+  outline:none;
+  border:none;
+  background-color:transparent;
+  margin:0;
+  padding:0;
+  cursor:pointer;
+}
