Compact facet counts

--- a/src/hud/search/Facets.scss
+++ b/src/hud/search/Facets.scss
@@ -59,8 +59,8 @@
         }
 
         span.p6o-facet-value-count {
-          width:60px;
-          text-align:right;
+          width:40px;
+          text-align:center;
           color:#fff;
           font-weight:bold;
         }
