Hover style tweak

--- a/src/map/Map.scss
+++ b/src/map/Map.scss
@@ -27,6 +27,7 @@
     background-color:#fff;
     padding:10px 12px;
     max-width:500px;
+    border-left:6px solid #c3c3c3;
     @include rounded-corners(2px);
     @include box-shadow(2px, 2px, 14px, 0.4);
   }
