--- a/src/map/Map.scss
+++ b/src/map/Map.scss
@@ -34,7 +34,6 @@
 
 }
 
-
 .p6o-map-container.hover * {
   cursor:pointer;
 }
@@ -58,78 +57,101 @@
   .maplibregl-popup-content {
     padding:0;
     margin:20px 0;
+    box-shadow:none;
   } 
 
   .p6o-selection {
     width:440px;
+    padding-top:12px;
+    @include rounded-corners(3px);
+    @include box-shadow(0, 0, 12px, 0.45);
 
-    h1 {
-      font-size:17px;
-      margin:0;
-      padding:0;
-    }
+    .p6o-selection-content {
+      background-color:#fff;
+      @include rounded-corners-bottom(3px); 
 
-    .p6o-selection-header-image {
-      position:relative;
-      width:100%;
-      height:180px;
-      background-size:cover;
-      background-position:center;
-      @include rounded-corners-top(3px);
+      .p6o-selection-header-image {
+        width:100%;
+        height:140px;
+        background-size:cover;
+        background-position:center;
+      }
+
+      main {
+        padding:10px 20px 20px 20px;
+        border-top:1px solid #e9e9e9;
+      }
 
       h1 {
-        display:block;
-        padding:25px 20px 10px 20px;
-        position:absolute;
-        bottom:0;
-        left:0;
-        width:100%;
-        box-sizing:border-box;
-        color:#fff;
-        text-shadow:1px 1px 2px rgb(0,0,0,0.95);
-        @include linear-gradient(rgba(0,0,0,0), rgba(0,0,0,.45));
-      }
-    }
-
-    .p6o-selection-header-noimage h1 {
-      padding:20px 20px 0 20px;
-    }
-
-    .p6o-selection-description {
-      padding:10px 20px;
-      font-size:15px;
-      line-height:140%;
-      max-height:200px;
-      overflow-y:auto;
-    }
-
-    .p6o-selection-source {
-      padding:20px;
-      color:#fff;
-      font-size:16px;
-      display:flex;
-      justify-content:space-between;
-      align-items:flex-end;
-      @include rounded-corners-bottom(3px);
-
-      p {
-        margin:0;
-        padding:0;
+        padding-top:10px;
+        font-size:16px;
       }
 
-      a {
+      h2 {
+        padding-top:5px;
+        font-weight:normal;
         font-size:15px;
-        font-weight:bold;
-        color:#fff;
-        display:inline-block;
-        padding:10px;
-        border:2px solid #fff;
-        text-decoration:none;
-        @include rounded-corners(3px);
+
+        svg {
+          color:#626262;
+          font-size:17px;
+          vertical-align:text-top;
+          padding-right:3px;
+        }
+
+        a {
+          text-decoration:none;
+          color:#626262;
+        }
+
+        a:hover {
+          text-decoration:underline;
+        }
+      
       }
 
-      a:hover {
-        background-color:rgba(255,255,255,0.25);
+      ul.p6o-selection-types {
+        list-style-type:none;
+        margin:0;
+        padding:8px 0 4px 0;
+
+        li {
+          display:inline-block;
+          padding:2px 8px;
+          color:#fff;
+          background-color:#858585;
+          border-radius:3px;
+          text-transform:capitalize;
+          font-weight:bold;
+          font-size:12px;
+          margin:0 3px 3px 0;
+        }
+
+      }
+
+      ul.p6o-selection-types:empty {
+        display:none;
+      }
+
+      .p6o-selection-description {
+        padding-top:5px;
+        font-size:13px;
+        max-height:200px;
+        overflow-y:auto;
+      }
+
+      footer {
+        padding:15px 20px;
+        font-size:13px;
+        background-color:#f7f7f7;
+        border-top:1px solid #e9e9e9;
+        @include rounded-corners-bottom(3px); 
+        color:#626262;
+
+        svg {
+          font-size:19px;
+          vertical-align:text-bottom;
+        }
       }
 
     }
