--- a/src/map/Map.scss
+++ b/src/map/Map.scss
@@ -49,14 +49,16 @@
 
 .p6o-map-container .maplibregl-popup {
   max-width:none !important;
+  z-index:1;
 
   .maplibregl-popup-tip {
-    display:none;
+    border: 14px solid transparent;
+    border-top-color: #f7f7f7;
   }
 
   .maplibregl-popup-content {
     padding:0;
-    margin:20px 0;
+    margin:0;
     box-shadow:none;
   } 
 
@@ -78,36 +80,41 @@
       }
 
       main {
-        padding:10px 20px 20px 20px;
         border-top:1px solid #e9e9e9;
+        padding-bottom:20px;
       }
 
-      h1 {
-        padding-top:10px;
-        font-size:16px;
-      }
+      .p6o-selection-main-fixed {
+        padding:10px 20px 0 20px;
 
-      h2 {
-        padding-top:5px;
-        font-weight:normal;
-        font-size:15px;
-
-        svg {
-          color:#626262;
-          font-size:17px;
-          vertical-align:text-top;
-          padding-right:3px;
+        h1 {
+          padding-top:10px;
+          font-size:16px;
         }
 
-        a {
-          text-decoration:none;
-          color:#626262;
+        h2 {
+          padding-top:5px;
+          font-weight:normal;
+          font-size:15px;
+
+          svg {
+            color:#626262;
+            font-size:17px;
+            vertical-align:text-top;
+            padding-right:3px;
+          }
+
+          a {
+            text-decoration:none;
+            color:#626262;
+          }
+
+          a:hover {
+            text-decoration:underline;
+          }
+
         }
 
-        a:hover {
-          text-decoration:underline;
-        }
-      
       }
 
       ul.p6o-selection-types {
@@ -133,25 +140,79 @@
         display:none;
       }
 
-      .p6o-selection-description {
-        padding-top:5px;
-        font-size:13px;
-        max-height:200px;
-        overflow-y:auto;
+      .p6o-selection-main-flex {
+        max-height:160px;
+        overflow-y:auto;      
+
+        .p6o-selection-description {
+          padding:0 20px;
+          font-size:13px;
+        }
+        
+      }
+      
+      .p6o-selection-sourcelink {
+
+        a.p6o-selection-sourcelink-top {
+          font-size:16px;
+          font-weight:bold;
+
+          svg {
+            font-size:18px;
+            vertical-align:text-top;
+          }
+
+        }
+
+        a.p6o-selection-sourcelink-bottom {
+          font-size:13px;
+        }
+
       }
 
       footer {
+        display:flex;
+        justify-content:space-between;
+        align-items:flex-end;
         padding:15px 20px;
-        font-size:13px;
         background-color:#f7f7f7;
         border-top:1px solid #e9e9e9;
         @include rounded-corners-bottom(3px); 
-        color:#626262;
 
-        svg {
-          font-size:19px;
-          vertical-align:text-bottom;
+        .p6o-selection-view-source {
+          padding-bottom:3px;
+
+          a {
+            display:block;
+            text-decoration:none;
+            color:#626262;
+          }
+
+          a:hover {
+            text-decoration:underline;
+          }  
+
+          a.p6o-selection-view-source-top {
+            font-size:15px;
+            font-weight:bold;
+
+            svg {
+              font-size: 18px;
+              vertical-align: text-top;
+            }
+
+          }
+
+          a.p6o-selection-view-source-bottom {
+            font-size:13px;
+          }
+
         }
+
+        img {
+          max-height:60px;
+        }
+
       }
 
     }
