--- a/src/map/Map.scss
+++ b/src/map/Map.scss
@@ -86,6 +86,7 @@
 
       .p6o-selection-main-fixed {
         padding:10px 20px 0 20px;
+        margin-bottom:10px;
 
         h1 {
           padding-top:10px;
@@ -147,6 +148,56 @@
         .p6o-selection-description {
           padding:0 20px;
           font-size:13px;
+        }
+
+        ul.p6o-selection-external-links {
+          list-style-type:none;
+          margin:0;
+          padding:20px 20px 0 20px;
+          border-top: 1px solid #e9e9e9;
+
+          li {
+            display:inline-block;
+            margin-right:6px;
+
+            a {
+              text-decoration:none;
+            }
+
+            img {
+              max-width:25px;
+              max-height:25px;
+              vertical-align:middle;
+              @include rounded-corners(3px);
+            }
+
+            svg {
+              color:#626262;
+              font-size:25px;
+              vertical-align:middle;
+              padding:0 4px;
+            }
+
+            span.p6o-link-placeholder {
+              padding: 5px;
+              background-color:#858585;
+              font-size: 16px;
+              font-weight: bold;
+              height: 1em;
+              width: 1em;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              border-radius: 3px;
+              color: #fff;
+            }
+
+          }
+
+        }
+
+        ul.p6o-selection-external-links:empty {
+          display:none;
         }
         
       }
