--- a/src/map/Map.scss
+++ b/src/map/Map.scss
@@ -207,54 +207,61 @@
           font-size:13px;
         }
 
-        ul.p6o-selection-external-links {
-          list-style-type:none;
-          margin:0;
-          padding:20px 20px 0 20px;
+        .p6o-selection-external-links {
+          padding: 20px 20px 0 20px;
           border-top: 1px solid #e9e9e9;
 
-          li {
-            display:inline-block;
-            margin-right:6px;
+          h3 {
+            font-size:16px;
+            margin:0;
+            padding:0 0 10px 0
+          }
 
-            a {
-              text-decoration:none;
-            }
+          ul {
+            list-style-type:none;
+            margin:0;
+            padding:0; 
 
-            img {
-              max-width:25px;
-              max-height:25px;
-              vertical-align:middle;
-              @include rounded-corners(3px);
-            }
+            li {
+              display:inline-block;
+              margin-right:6px;
 
-            svg {
-              color:#626262;
-              font-size:25px;
-              vertical-align:middle;
-              padding:0 4px;
-            }
+              a {
+                text-decoration:none;
+              }
 
-            span.p6o-link-placeholder {
-              padding: 5px;
-              background-color:#858585;
-              font-size: 16px;
-              font-weight: bold;
-              height: 1em;
-              width: 1em;
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              border-radius: 3px;
-              color: #fff;
+              img {
+                max-width:25px;
+                max-height:25px;
+                vertical-align:middle;
+                @include rounded-corners(3px);
+              }
+
+              svg {
+                color:#626262;
+                font-size:25px;
+                vertical-align:middle;
+                padding:0 4px;
+              }
+
+              span.p6o-link-placeholder {
+                padding: 5px;
+                background-color:#858585;
+                font-size: 16px;
+                font-weight: bold;
+                height: 1em;
+                width: 1em;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 3px;
+                color: #fff;
+              }
+
             }
 
           }
 
-        }
-
-        ul.p6o-selection-external-links:empty {
-          display:none;
         }
         
       }
