Selection preview with slide transition (unfinished)

--- a/src/index.scss
+++ b/src/index.scss
@@ -67,6 +67,7 @@ $bl-red-hover:#e55767;
 @import './hud/HUD';
 @import './loading/Loading';
 @import './map/Map';
+@import './map/selection/SelectionPreview.scss';
 @import './tutorial/Tutorial';
 
 @import './usertesting/UserTesting';
