--- a/src/map/Map.scss
+++ b/src/map/Map.scss
@@ -103,6 +103,8 @@
     box-shadow:none;
   } 
 
+  /*
+
   .p6o-selection {
     width:440px;
     padding-top:12px;
@@ -347,5 +349,6 @@
     height:100%;
     background-color:red;
   }
-
+  */
+  
 }
