--- a/src/map/selection/SelectionPreview.scss
+++ b/src/map/selection/SelectionPreview.scss
@@ -32,7 +32,7 @@
 
 }
 
-.cardstack .card .p6o-selection-itemcard {
+.cardstack .card .p6o-selection-card {
   @include rounded-corners(3px);
 
   header {
@@ -52,6 +52,81 @@
     }
 
   }
+
+}
+
+.cardstack .card .p6o-selection-itemlistcard {
+
+  header {
+    justify-content:space-between;
+  }
+
+  ul {
+    background-color:#fff;
+    list-style-type:none;
+    margin:0;
+    padding:0; 
+    max-height:400px;
+    overflow-y:auto;
+  }
+
+  li:first-child {
+    border-top:none;
+  }
+
+  li {
+    padding:15px;
+    border-top:1px solid #e9e9e9;
+
+    a {
+      text-decoration:none;
+      color:#626262;
+      font-size:14px;
+      font-weight:bold;
+      margin-left:8px;
+    }
+
+    a:hover {
+      text-decoration:underline;
+    }
+
+    img {
+      max-width:25px;
+      max-height:25px;
+      vertical-align:middle;
+      @include rounded-corners(3px);
+    }
+
+    svg {
+      color:#626262;
+      font-size:25px;
+      vertical-align:middle;
+      padding:0 4px;
+    }
+
+    .p6o-link-placeholder {
+      display:inline-block;
+    }
+
+    .p6o-link-placeholder-inner {
+      padding:5px;
+      background-color:#858585;
+      font-size:16px;
+      font-weight:bold;
+      height:1em;
+      width:1em;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      color:#fff;
+      @include rounded-corners(2px);
+    }
+
+  }
+
+}
+
+.cardstack .card .p6o-selection-itemcard {
 
   .p6o-selection-content {
     background-color:#fff;
