Added a11y labels for screen reader

--- a/src/hud/HUD.scss
+++ b/src/hud/HUD.scss
@@ -20,6 +20,7 @@
     top:20px;
     width:60px;
     height:60px;
+    color:#3e3e3e;
     font-size:34px;
     display:flex;
     align-items:center;
