--- a/src/hud/search/SearchPanel.scss
+++ b/src/hud/search/SearchPanel.scss
@@ -52,6 +52,7 @@
       padding-left:10px;
       align-items:center;
       font-size:16px;
+      font-weight:normal;
       white-space:nowrap;
       overflow:hidden;
     }
