--- a/src/index.scss
+++ b/src/index.scss
@@ -25,6 +25,21 @@ button {
   cursor:pointer;
 }
 
+button:focus {
+  outline:solid;
+}
+
+.screenreader-only {
+  position: absolute;
+  height: 1px;
+  width: 1px;
+  clip: rect(1px 1px 1px 1px); // IE 6 and 7
+  clip: rect(1px,1px,1px,1px);
+  clip-path: polygon(0px 0px, 0px 0px, 0px 0px);
+  -webkit-clip-path: polygon(0px 0px, 0px 0px, 0px 0px);
+  overflow: hidden !important;
+}
+
 $bl-red:#c61327;
 $bl-red-hover:#e55767;
 
