--- a/src/hud/search/Facets.scss
+++ b/src/hud/search/Facets.scss
@@ -43,6 +43,8 @@
       margin-bottom:5px;
       display:block;
       pointer-events:none;
+      transition:transform 0.15s;
+      cursor:pointer;
 
       .p6o-facet-value-wrapper {
         display:inline-block;
@@ -71,6 +73,10 @@
         }
 
       }
+    }
+
+    li:hover:not(.p6o-facet-values-remaining) {
+      transform:scale(1.04);
     }
 
     li.p6o-facet-values-remaining {
