--- a/src/index.scss
+++ b/src/index.scss
@@ -27,7 +27,7 @@ button {
 
 button:focus {
   outline:none;
-  outline:2px solid rgba(0,0,0,0.65);
+  // outline:2px solid rgba(0,0,0,0.65);
 }
 
 .screenreader-only {
