Link lists now carry referrer info

--- a/src/map/selection/SelectionPreview.scss
+++ b/src/map/selection/SelectionPreview.scss
@@ -66,6 +66,16 @@
 
   header {
     justify-content:space-between;
+
+    h1 {
+      color:#fff;
+      white-space:nowrap;
+      overflow:hidden;
+      text-overflow:ellipsis;
+      font-size:16px;
+      max-width:320px;
+    }
+    
   }
 
   ul {
