--- a/src/map/selection/SelectionPreview.scss
+++ b/src/map/selection/SelectionPreview.scss
@@ -224,18 +224,21 @@
     h1 {
       padding-top:10px;
       font-size:16px;
-      
-      svg {
-        padding-left:2px;
-        font-size:19px;
-        vertical-align:text-top;
-      }
     }
 
     h2 {
       padding-top:5px;
       font-size:16px;
       font-weight:normal;
+
+      svg {
+        padding-left:2px;
+        font-size:16px;
+        vertical-align:text-top;
+        position:relative;
+        top:2px;
+      }
+
     }
 
     p.when {
