--- a/src/hud/search/SearchPanel.scss
+++ b/src/hud/search/SearchPanel.scss
@@ -36,14 +36,18 @@
     z-index:1;
     pointer-events:all;
 
-    .p6o-hud-searchtoolbar-wrapper {
+    .p6o-hud-searchtoolbar-body {
+      @include rounded-corners-bottom(3px);
+      
+      -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, .2);
+      -moz-box-shadow:0 1px 4px rgba(0, 0, 0, .2);
+          box-shadow:0 1px 4px rgba(0, 0, 0, .2);
+    }
+
+    .p6o-hud-searchtoolbar-footer {
       display:flex;
       background-color:#f8f8f8;           
       @include rounded-corners-bottom(3px);
-
-      -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, .2);
-         -moz-box-shadow:0 1px 4px rgba(0, 0, 0, .2);
-              box-shadow:0 1px 4px rgba(0, 0, 0, .2);
     }
 
     .p6o-hud-searchtoolbar-resultcount {
