--- a/src/map/selection/SelectionPreview.scss
+++ b/src/map/selection/SelectionPreview.scss
@@ -87,6 +87,9 @@
     padding:0; 
     max-height:400px;
     overflow-y:auto;
+    max-width:100%;
+    overflow-x:hidden;
+    position:relative;
   }
 
   li:first-child {
@@ -96,6 +99,8 @@
   li {
     padding:15px;
     border-top:1px solid #e9e9e9;
+    width:100%;
+    box-sizing:border-box;
   }
 
   li.p6o-link-internal {
@@ -119,49 +124,73 @@
   }
 
   li.p6o-link-external {
+    display:flex;
+    align-items:center;
+
+    .p6o-external-link-icon {
+      flex-basis:40px;
+      flex-shrink:0;
+      text-align:center;
+
+      img {
+        max-width:25px;
+        max-height:25px;
+        vertical-align:middle;
+        @include rounded-corners(3px);
+      }
+  
+      svg {
+        color:#626262;
+        font-size:25px;
+        vertical-align:middle;
+        padding:0 4px;
+      }
+
+      .p6o-link-placeholder {
+        display:inline-block;
+      }
+  
+      .p6o-link-placeholder-inner {
+        padding:5px;
+        background-color:#858585;
+        font-size:16px;
+        font-weight:bold;
+        height:1em;
+        width:1em;
+        display:flex;
+        justify-content:center;
+        align-items:center;
+        color:#fff;
+        @include rounded-corners(2px);
+      }
+  
+    }
+
+    .p6o-external-link-meta {
+      overflow:hidden;
+ 
+      a {
+        text-decoration:none;
+        color:#626262;
+        font-size:14px;
+        margin-left:8px;
+        display:block;
+        white-space:nowrap;
+      }
+
+      a.p6o-external-link-label {
+        text-overflow:ellipsis;
+        overflow:hidden;
+      }
+
+      a.p6o-external-link-host {
+        font-weight:bold;
+      }
+
+      a:hover {
+        text-decoration:underline;
+      }
     
-    a {
-      text-decoration:none;
-      color:#626262;
-      font-size:14px;
-      font-weight:bold;
-      margin-left:8px;
-    }
-
-    a:hover {
-      text-decoration:underline;
-    }
-
-    img {
-      max-width:25px;
-      max-height:25px;
-      vertical-align:middle;
-      @include rounded-corners(3px);
-    }
-
-    svg {
-      color:#626262;
-      font-size:25px;
-      vertical-align:middle;
-      padding:0 4px;
-    }
-
-    .p6o-link-placeholder {
-      display:inline-block;
-    }
-
-    .p6o-link-placeholder-inner {
-      padding:5px;
-      background-color:#858585;
-      font-size:16px;
-      font-weight:bold;
-      height:1em;
-      width:1em;
-      display:flex;
-      justify-content:center;
-      align-items:center;
-      color:#fff;
-      @include rounded-corners(2px);
     }
 
   }
