--- a/src/hud/search/SearchPanel.scss
+++ b/src/hud/search/SearchPanel.scss
@@ -6,11 +6,11 @@
   pointer-events:none;
 
   .p6o-hud-searchinput {
-    padding-left:40px;
+    padding-left:47px;
     height:40px;
     box-sizing:border-box;
     background-color:#fcfCfc;
-    box-shadow:inset 4px 1px 6px #fff, inset -1px -1px 2px rgba(0,0,0,0.25), 0 0 6px rgba(0,0,0,0.25);
+    box-shadow:inset -1px -1px 2px rgba(0,0,0,0.1), 0 0 4px rgba(0,0,0,0.3);
     border-radius:4px;
     position:relative;
     z-index:2;
@@ -26,11 +26,15 @@
       background-color:transparent;
     }
 
+    input::placeholder {
+      color:#b3b3b3;
+    }
+
   }
 
   .p6o-hud-searchtoolbar {
     width:100%;
-    padding:0 5px 0 20px;
+    padding:0 5px 0 40px;
     box-sizing:border-box;
     color:#5c5c5c;
     z-index:1;
@@ -46,7 +50,8 @@
 
     .p6o-hud-searchtoolbar-footer {
       display:flex;
-      background-color:#f8f8f8;           
+      background-color:#f8f8f8;
+      border-top:1px solid #dfdfdf;           
       @include rounded-corners-bottom(3px);
     }
 
@@ -59,6 +64,7 @@
       font-weight:normal;
       white-space:nowrap;
       overflow:hidden;
+      padding:7px 12px;
     }
 
     .p6o-hud-searchtoolbar-btn {
