--- a/src/hud/search/Filters.scss
+++ b/src/hud/search/Filters.scss
@@ -25,6 +25,10 @@
         white-space:nowrap;
         overflow:hidden;
         text-overflow:ellipsis;
+
+        svg {
+          padding:0 5px 0 0;
+        }
       }
 
       svg {
@@ -32,6 +36,7 @@
         font-size:20px;
         flex-shrink:0;
         cursor:pointer;
+        vertical-align:text-bottom;
       }
 
     }
