--- a/src/hud/HUD.scss
+++ b/src/hud/HUD.scss
@@ -2,7 +2,7 @@
   border:1px solid rgba(0,0,0,0.2);
   z-index:98;
   cursor:pointer;
-  background-color:#f4f4f4;
+  background-color:#fafafa;
   box-shadow:inset 2px 4px 18px #fff, inset -2px -3px 4px rgba(0,0,0,0.15), 0 0 12px rgba(0,0,0,0.35);
 }
 
@@ -32,7 +32,7 @@
     width:64px;
     height:64px;
     font-size:34px;
-    background-color:#f8f8f8;
+    background-color:#fafafa;
     box-shadow:inset 2px 4px 18px #fff, inset -2px -3px 4px rgba(0,0,0,0.15), 0 0 4px rgba(0,0,0,0.2);
   }
 
@@ -46,11 +46,11 @@
     left:21px;
     width:58px;
     height:104px;
-    background-color:#f5f5f5;
+    background-color:#f7f7f7;
     font-size:20px;
     padding-top:55px;
     z-index:97;
-    box-shadow:0 0 12px rgba(0,0,0,0.35);
+    box-shadow:0px -2px 2px rgb(0,0,0,0.05), 0 0 12px rgba(0,0,0,0.35);
     @include rounded-corners(30px);
 
     .p6o-filters-badge {
