--- a/src/map/Map.scss
+++ b/src/map/Map.scss
@@ -3,13 +3,13 @@
   height:100vh;
   transition:all;
 
-  .p6o-zoom {
+  .p6o-controls {
     position:absolute;
     right:20px;
     top:20px;
     z-index:98;
     
-    .p6o-zoom-btn {
+    .p6o-controls-btn {
       width:50px;
       height:50px;
       margin-bottom:15px;
@@ -18,6 +18,10 @@
       justify-content:center;
       font-size:30px;
       @include rounded-corners(50%);
+    }
+
+    .p6o-controls-btn.p6o-map-modes {
+      font-size:24px;
     }
 
   }
