Map mode selector: styles + transition anim

--- a/src/map/controls/MapModesDropdown.scss
+++ b/src/map/controls/MapModesDropdown.scss
@@ -2,10 +2,11 @@
   position:absolute;
   top:0;
   right:0;
-  margin:0;
-  padding:5px 60px 0 0;
+  padding:5px;
+  margin:0 60px 0 0;
   z-index:1;
   pointer-events:none;
+  overflow:hidden;
 
   ul {
     list-style-type:none;
@@ -17,13 +18,13 @@
     pointer-events:all;
     background-color:#fff;
     margin:4px 0;
+    white-space:nowrap;
     padding:8px 14px;
     @include rounded-corners(3px);
     @include box-shadow(0, 0, 4px, 0.25);
   }
 
   h1 {
-    white-space:nowrap;
     font-size:16px;
   }
 
