--- a/src/hud/HUD.scss
+++ b/src/hud/HUD.scss
@@ -55,7 +55,7 @@
 
     .p6o-filters-badge {
       color:#fff;
-      background-color:red;
+      background-color:#ff0000;
       font-size:10px;
       font-family:Arial, Helvetica, sans-serif;
       font-weight:bold;
@@ -65,7 +65,7 @@
       justify-content:center;
       align-items:center;
       position:absolute;
-      bottom:23px;
+      bottom:26px;
       right:6px;
       @include rounded-corners(50%);
     }
