--- a/src/map/selection/SelectionPreview.scss
+++ b/src/map/selection/SelectionPreview.scss
@@ -39,6 +39,14 @@
       display:none;
     }
 
+    footer {
+      font-size:15px;
+      padding:15px 18px;
+      background-color:#f7f7f7;
+      border-top:1px solid #e9e9e9;
+      @include rounded-corners-bottom(3px); 
+    }
+
   }
 
   .card.next {
@@ -88,8 +96,6 @@
 }
 
 .cardstack .card .p6o-selection-itemlistcard {
-  min-height:180px;
-
 
   header {
     justify-content:space-between;
@@ -115,6 +121,7 @@
     max-width:100%;
     overflow-x:hidden;
     position:relative;
+    min-height:100px;
   }
 
   li:first-child {
@@ -250,6 +257,16 @@
 
   }
 
+  footer {
+   
+    svg {
+      font-size:18px;
+      vertical-align:text-top;
+      padding-right:5px;
+    }
+
+  }
+
 }
 
 .cardstack .card .p6o-selection-itemcard {
@@ -350,10 +367,6 @@
   }
 
   footer {
-    padding:15px 18px;
-    background-color:#f7f7f7;
-    border-top:1px solid #e9e9e9;
-    @include rounded-corners-bottom(3px); 
 
     .p6o-selection-related-records {
 
