--- a/src/map/selection/SelectionPreview.scss
+++ b/src/map/selection/SelectionPreview.scss
@@ -1,3 +1,5 @@
+@import './cards/FullscreenImage';
+
 .cardstack {
   position:relative;
   width:440px;
@@ -282,6 +284,16 @@
     background-size:cover;
     background-position:center;
     position:relative;
+
+    .p6o-selection-header-image-accreditation {
+      position:absolute;
+      bottom:5px;
+      left:20px;
+      color:#fff;
+      font-size:13px;
+      font-weight:bold;
+      text-shadow:0 0 2px #000;
+    }
 
     .p6o-selection-header-image-btn-full {
       position:absolute;
