--- a/src/hud/search/Facets.scss
+++ b/src/hud/search/Facets.scss
@@ -33,6 +33,10 @@
       }
     }
 
+    .p6o-facets-carousel.centered {
+      justify-content: space-around;
+    }
+
     ul {
       list-style-type:none;
       margin:5px 0 0 0;
