--- a/src/hud/HUD.scss
+++ b/src/hud/HUD.scss
@@ -14,6 +14,14 @@
 .p6o-hud {
   color:#3e3e3e;
 
+  .p6o-magic-button {
+    position:absolute;
+    top:20px;
+    left:20px;
+    width:60px;
+    height:106px; // Defines the position of tour marker!
+  }
+
   .p6o-search-button,
   .p6o-filters-button {
     position:absolute;
@@ -27,8 +35,8 @@
   }
 
   .p6o-search-button {
-    top:20px;
-    left:20px;
+    top:0;
+    left:0;
     width:60px;
     height:60px;
     font-size:34px;
@@ -42,8 +50,8 @@
   }
   
   .p6o-filters-button {
-    top:21px;
-    left:21px;
+    top:1px;
+    left:1px;
     width:58px;
     height:104px;
     background-color:#f7f7f7;
