--- a/src/tutorial/Tutorial.scss
+++ b/src/tutorial/Tutorial.scss
@@ -15,7 +15,7 @@
     padding:15px 20px;
     background-color:#fff;
     pointer-events:all;
-    width:440px;
+    width:480px;
     line-height:160%;
     @include rounded-corners(5px);
     @include box-shadow(2px, 2px, 18px, 0.4);
@@ -34,7 +34,23 @@
     }
 
     .p6o-welcome-buttons {
-      text-align:right;
+      width:100%;
+      display:flex;
+      align-items:baseline;
+
+      label {
+        flex:1;
+
+        input[type="checkbox"] {
+          display:none;
+        }
+
+        svg {
+          font-size:20px;
+          padding-right:5px;
+          vertical-align:text-bottom;
+        }
+      }
 
       button {
         border:none;
