--- a/src/map/controls/Controls.scss
+++ b/src/map/controls/Controls.scss
@@ -29,3 +29,15 @@
   }
 
 }
+
+.p6o-map-container .p6o-controls.mobile {
+  top:70px;
+  right:15px;
+
+  .p6o-controls-btn {
+    width:50px;
+    height:50px;
+    font-size:25px;
+  }
+  
+}
