--- a/src/map/Map.scss
+++ b/src/map/Map.scss
@@ -1,5 +1,9 @@
 @import './controls/Controls';
 
+.p6o-map-container.mobile {
+  margin-top:40px;
+}
+
 .p6o-map-container {
   position:relative;
   height:100vh;
