--- a/src/index.scss
+++ b/src/index.scss
@@ -84,5 +84,6 @@ $bl-red-hover:#e55767;
 @import './hud/MobileHUD';
 @import './loading/Loading';
 @import './map/Map';
+@import './map/selection/MobilePreview.scss';
 @import './map/selection/SelectionPreview.scss';
 @import './tutorial/Tutorial';
