--- a/src/map/selection/MobilePreview.scss
+++ b/src/map/selection/MobilePreview.scss
@@ -2,4 +2,37 @@
   position:fixed;
   bottom:0;
   width:100%;
+  z-index: 99;
+
+  .cardstack {
+    width:100%;
+    @include rounded-corners(0);
+
+    .card {
+      width:100%;
+    }
+
+    .card .p6o-selection-card {
+      @include rounded-corners(0);
+  
+      header {
+        height:36px;
+        @include rounded-corners(0);
+      }
+
+      .p6o-selection-content {
+        max-height: calc(100vh - 36px);
+        overflow-y: auto;
+      }
+
+      .p6o-selection-main-flex {
+        max-height:none;
+        overflow-y:auto;
+      }
+ 
+    }
+
+
+  }
+
 }
