--- a/src/hud/MobileHUD.scss
+++ b/src/hud/MobileHUD.scss
@@ -3,12 +3,12 @@
   z-index:98;
   cursor:pointer;
   background-color:#fafafa;
-  box-shadow:0 0 6px rgba(0,0,0,0.2);
+  box-shadow:0 0 4px rgba(0,0,0,0.15);
 }
 
 .mobile .p6o-hud-button:hover {
   background-color:#fff;
-  box-shadow:0 0 6px rgba(0,0,0,0.2);
+  box-shadow:0 0 4px rgba(0,0,0,0.15);
 }
 
 .p6o-mobile-hud {
@@ -22,7 +22,7 @@
     display:flex;
     align-items:stretch;
     position:relative;
-    @include box-shadow(0, 0, 6px, 0.2);
+    @include box-shadow(0, 0, 6px, 0.15);
 
     button.p6o-mobile-hud-filter-toggle {
       display:inline-block;
@@ -30,6 +30,7 @@
       border:none;
       outline:none;
       background-color:#fff;
+      border-right:1px solid #efefef;
 
       .p6o-mobile-hud-filter-toggle-icon {
         font-size:22px;
@@ -50,7 +51,7 @@
       position:relative;
 
       input {
-        background-color: #f4f4f4;
+        background-color: #f6f6f6;
         width: 100%;
         height: 100%;
         box-sizing: border-box;
@@ -72,6 +73,7 @@
     justify-content: space-between;
     background-color:#fbfbfb;
     padding:8px;
+    border-top:1px solid #efefef;
     @include box-shadow(0, 0, 4px, 0.25);
 
     h3 {
